# PowerVoronoiMap-cpp

./: README.md
.metadata/: version.ini
src/: CMakeCache.txt  CMakeLists.txt  ConflictList.cpp  ConflictList.h  Face.cpp  Face.h  HullEdge.cpp  HullEdge.h  Vector.h  asite.cpp  asite.h  conflictlist.cpp  conflictlist.h  convexclip.cpp  convexclip.h  convexhull.cpp  convexhull.h  convexhull.h.autosave  cvertex.h  cvertexlist.h  face.cpp  face.h  geometry.cpp  graphedge.h  hulledge.cpp  hulledge.h  hullege.h  iSite.h  infopoint.cpp  infopoint.h  insideflag.h  interpolcolor.cpp  jpolygon.cpp  jsite.cpp  object.h  plane3d.h  point2d.h  polygonsimple.cpp  polygonsimple.h  polygonsimple.h.autosave  (+29 more)
src/ConvexClip/: convexclip.cpp  convexclip.h  cvertex.cpp  cvertex.h  cvertexlist.cpp  cvertexlist.h  infopoint.cpp  infopoint.h  insideflag.h
src/datastructure/: openlist.cpp  openlist.h
src/diagram/: powerdiagram.cpp  powerdiagram.h  rectangle2d.cpp  rectangle2d.h
src/extensions/: VoroCellObject.h
src/gui/: jpolygon.cpp  jpolygon.h  jsite.cpp  jsite.h  powerbox.cpp  powerbox.h
src/helper/: geometry.h  interpolcolor.cpp  interpolcolor.h
src/interface/: treedata.cpp  treedata.h
src/test/: compile_commands.json  leak.err  testConvexHull  testVector  testVector.cpp  testVertex.cpp
src/treemap/: asite.cpp  asite.h  iSite.h  polygonsimple.cpp  site.h  (+3 more)
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  leak  test  test.cpp  testConvexHull.cpp  testPlane3D  testPlane3D.cpp  testProject.cpp  testVector.cpp  testVertex
voronoimap/: CMakeLists.txt
(+20 files in other folders)
